# dcc-mcp-fpt

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_zh.md  codecov.yml  docker-compose.profiles.yml  docker-compose.yml  justfile  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  live-shotgrid-smoke.yml  release.yml
deployment/: HARNESS.md  OPENCLAW.md
src/dcc_mcp_fpt/: __init__.py  __main__.py  access.py  asgi.py  cli.py  client.py  connection_pool.py  exceptions.py  models.py  request_context.py  runtime_context.py  schema_cache.py  server.py  utils.py
src/dcc_mcp_fpt/skills/shotgrid-batch/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-batch/scripts/: batch_operations.py
src/dcc_mcp_fpt/skills/shotgrid-crud/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-crud/scripts/: create_entity.py  delete_entity.py  find_entities.py  find_one_entity.py  update_entity.py
src/dcc_mcp_fpt/skills/shotgrid-discovery/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-discovery/scripts/: check_connection.py  get_server_info.py  list_entity_types.py
src/dcc_mcp_fpt/skills/shotgrid-note/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-note/scripts/: create_note.py  find_notes.py  update_note.py
src/dcc_mcp_fpt/skills/shotgrid-schema/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-schema/scripts/: get_field_schema.py  get_schema.py  list_entity_types.py
src/dcc_mcp_fpt/skills/shotgrid-search/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-search/scripts/: search_by_name.py  search_entities.py
src/dcc_mcp_fpt/skills/shotgrid-setup/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-setup/scripts/: generate_agent_config.py  validate_runtime_config.py
src/dcc_mcp_fpt/skills/shotgrid-users/: SKILL.md  tools.yaml
src/dcc_mcp_fpt/skills/shotgrid-users/scripts/: whoami.py
tests/: conftest.py  test_access.py  test_asgi.py  test_client.py  test_connection_pool.py  test_gateway.py  test_models.py  test_project_scope.py  test_request_context.py  test_schema_cache.py  test_server_lifecycle.py  test_setup_skill.py  test_skill_runtime.py  test_skill_runtime_batch.py  test_skill_runtime_crud.py  test_skill_runtime_discovery.py  test_skill_runtime_notes.py  test_skill_runtime_schema.py  test_skill_runtime_search.py  test_skill_runtime_users.py  test_utils.py
tools/: lint_skills.py  shotgrid_live_crud_smoke.py
