[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dcc-mcp-fpt"
version = "0.1.9"
description = "A ShotGrid (Flow Production Tracking) adapter for the DCC-MCP ecosystem, bridging AI assistants to ShotGrid data through typed MCP tools."
authors = [
    { name = "Long Hao", email = "hal.long@outlook.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = [
    "fpt",
    "flow-production-tracking",
    "shotgrid",
    "mcp",
    "dcc",
    "ai",
    "llm",
    "model-context-protocol",
    "shotgun",
    "pipeline",
    "vfx",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "dcc-mcp-core>=0.19.45,<1.0.0",
    "pydantic>=2.0",
    "shotgun_api3>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "hatchling",
    "build",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/dcc-mcp/dcc-mcp-fpt"
Repository = "https://github.com/dcc-mcp/dcc-mcp-fpt"
"Bug Tracker" = "https://github.com/dcc-mcp/dcc-mcp-fpt/issues"

[project.scripts]
dcc-mcp-fpt = "dcc_mcp_fpt.cli:main"

[project.entry-points."dcc_mcp.adapters"]
fpt = "dcc_mcp_fpt:ShotGridMcpServer"

[tool.hatch.build.targets.wheel]
packages = ["src/dcc_mcp_fpt"]

[tool.pytest.ini_options]
testpaths = "tests"
python_files = "test_*.py"
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "C4", "PLC"]
ignore = [
    "E501",   # line length — handled by formatter
    "UP007",  # requires Python 3.10+
    "UP006",  # requires Python 3.9+
    "UP037",  # quoted annotations preserve Python 3.8 readability
    "UP045",  # X | None syntax requires Python 3.10+
    "B008",   # function calls in defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"tests/conftest.py" = ["PLC0415"]
"src/dcc_mcp_fpt/skills/*/scripts/*.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["src/dcc_mcp_fpt"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
